dashboard spacing final fix

--- a/my-app/src/Components/Dashboard/Dashboard.css
+++ b/my-app/src/Components/Dashboard/Dashboard.css
@@ -52,8 +52,8 @@
 	justify-content: center;
 	width: 100vw;
 	height: 60vh;
-	max-width: 1200px;
-	min-width: 800px;
+	max-width: 1250px;
+	min-width: 900px;
 	padding: 0px 75px 0px;
 }
 
